--- a/SITE-FINAL/style/style.css
+++ b/SITE-FINAL/style/style.css
@@ -61,3 +61,10 @@ body{
     background-color: rgba(0, 0, 0, 0.747);
     border-radius: 12px;
 }
+
+.card{
+    border: 4px solid red;
+    margin: 0 auto; /* Added */
+        float: none; /* Added */
+        margin-bottom: 10px; /* Added */
+}
