--- a/SITE-FINAL/style/style.css
+++ b/SITE-FINAL/style/style.css
@@ -4,7 +4,7 @@
 
 body{
     background-color: rgb(209, 209, 209);
-    background-image: url(/img/fundobody.png);
+    background-image: url(/SITE-FINAL/img/fundobody.png);
     background-repeat: no-repeat;
 }
 
@@ -16,8 +16,8 @@ body{
 }
 
 .subtexto{
-    box-shadow: 0px 0px 9px black;
-    background-color: rgba(0, 0, 0, 0.452);
+
+
     color: #fff;
     font-family: 'Roboto', sans-serif;
     font-size:1.2em;
@@ -65,6 +65,14 @@ body{
 .card{
     border: 4px solid red;
     margin: 0 auto; /* Added */
-        float: none; /* Added */
-        margin-bottom: 10px; /* Added */
+    float: none; /* Added */
+    margin-bottom: 10px; /* Added */
+    padding: 0;
 }
+
+.nasiol{
+    width: 100%;
+    border: none;
+    box-shadow: 0px 0px 30px rgba(129, 129, 129, 0.459);
+}
+
