--- a/SITE-FINAL/style/style.css
+++ b/SITE-FINAL/style/style.css
@@ -2,6 +2,13 @@
 
  @import url('https://fonts.googleapis.com/css2?family=Comic+Neue:wght@700&family=Roboto:wght@100;300;400;500&display=swap');
 
+ *{
+    margin:0;
+    padding:0;
+    border:0;
+}
+
+
 body{
     background-color: rgb(209, 209, 209);
     background-image: url(/SITE-FINAL/img/fundobody.png);
@@ -13,11 +20,10 @@ body{
     font-size: 50pt;
     font-family: 'Gabarito', sans-serif;
     text-shadow: 6px 2px 12px rgb(0, 0, 0);
+    text-align: center;
 }
 
 .subtexto{
-
-
     color: #fff;
     font-family: 'Roboto', sans-serif;
     font-size:1.2em;
@@ -76,3 +82,41 @@ body{
     box-shadow: 0px 0px 30px rgba(129, 129, 129, 0.459);
 }
 
+#contato{
+    width: 180px;
+    font-size: 0.9em;
+}
+
+.dropdown-item:hover{
+    background-color: rgba(248, 166, 166, 0.377);
+    transition: 1s;
+    color: black;
+}
+
+.mapa{
+    height: 400px;
+    width: 800px;
+}
+
+.rodape{
+    color: rgb(0, 0, 0);
+    font-family: 'Roboto', sans-serif;
+    font-size:1.5em;
+    font-weight:600;
+    text-decoration: none;
+}
+.rodape2{
+    color: rgb(0, 0, 0);
+    font-family: 'Roboto', sans-serif;
+    font-size:1.1em;
+    font-weight:600;
+    text-decoration: none;
+}
+
+.footer{
+    background-color: #fff;
+    height: 70px;
+    width: 100% !important;
+    margin: 0;
+    font-weight: 500;
+}
