--- a/SITE-FINAL/style/style.css
+++ b/SITE-FINAL/style/style.css
@@ -11,7 +11,7 @@
 
 body{
     background-color: rgb(209, 209, 209);
-    background-image: url(/SITE-FINAL/img/fundobody.png);
+    background-image: url(/img/fundobody.png);
     background-repeat: no-repeat;
 }
 
@@ -99,17 +99,17 @@ body{
 }
 
 .rodape{
-    color: rgb(0, 0, 0);
+    color:#fff;
     font-family: 'Roboto', sans-serif;
     font-size:1.5em;
-    font-weight:600;
+    font-weight:500;
     text-decoration: none;
 }
 .rodape2{
-    color: rgb(0, 0, 0);
+    color: #fff;
     font-family: 'Roboto', sans-serif;
     font-size:1.1em;
-    font-weight:600;
+    font-weight:500;
     text-decoration: none;
 }
 
