--- a/SITE-FINAL/style/style.css
+++ b/SITE-FINAL/style/style.css
@@ -1,70 +1,122 @@
- @import url('https://fonts.googleapis.com/css2?family=Gabarito:wght@400;800&family=Roboto:wght@300;400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Gabarito:wght@400;800&family=Roboto:wght@300;400;500&display=swap');
 
- @import url('https://fonts.googleapis.com/css2?family=Comic+Neue:wght@700&family=Roboto:wght@100;300;400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Comic+Neue:wght@700&family=Roboto:wght@100;300;400;500&display=swap');
+
+*{
+   margin:0;
+   padding:0;
+   border:0;
+}
+
 
 body{
-    background-color: rgb(209, 209, 209);
-    background-image: url(/img/fundobody.png);
-    background-repeat: no-repeat;
+   background-color: rgb(209, 209, 209);
+   background-image: url(/SITE-FINAL/img/fundobody.png);
+   background-repeat: no-repeat;
 }
 
 .titulo{
-    color: #fff;
-    font-size: 50pt;
-    font-family: 'Gabarito', sans-serif;
-    text-shadow: 6px 2px 12px rgb(0, 0, 0);
+   color: #fff;
+   font-size: 50pt;
+   font-family: 'Gabarito', sans-serif;
+   text-shadow: 6px 2px 12px rgb(0, 0, 0);
+   text-align: center;
 }
 
 .subtexto{
-    box-shadow: 0px 0px 9px black;
-    background-color: rgba(0, 0, 0, 0.452);
-    color: #fff;
-    font-family: 'Roboto', sans-serif;
-    font-size:1.2em;
-    font-weight:400;
-    padding-bottom: 15px;
+   color: #fff;
+   font-family: 'Roboto', sans-serif;
+   font-size:1.2em;
+   font-weight:400;
+   padding-bottom: 15px;
 }
 
 .largura-carousel {
-    width: 500px;
-    margin: 0px auto;
-    margin-bottom: 20px;
+   width: 500px;
+   margin: 0px auto;
+   margin-bottom: 20px;
 }
 
 
 #saiba{
-    background-color: rgb(143, 0, 0);
-    border: none;
-    height: 40px;
+   background-color: rgb(143, 0, 0);
+   border: none;
+   height: 40px;
 }
 
 #saiba:hover{
-    background-color: rgb(182, 45, 45);
+   background-color: rgb(182, 45, 45);
 }
 
 .servicos{
-    background-color: rgba(0, 0, 0, 0.822);
-    border-radius: 12px;
+   background-color: rgba(0, 0, 0, 0.822);
+   border-radius: 12px;
 }
 
 .tipos{
-    width: 100px;
-    height: 100px;
+   width: 100px;
+   height: 100px;
 }
 
 .fundoimg{
-    background-color: aqua;
-    width: 100% !important;
+   background-color: aqua;
+   width: 100% !important;
 }
 
 .fundo{
-    background-color: rgba(0, 0, 0, 0.747);
-    border-radius: 12px;
+   background-color: rgba(0, 0, 0, 0.747);
+   border-radius: 12px;
 }
 
 .card{
-    border: 4px solid red;
-    margin: 0 auto; /* Added */
-        float: none; /* Added */
-        margin-bottom: 10px; /* Added */
+   border: 4px solid red;
+   margin: 0 auto; /* Added */
+   float: none; /* Added */
+   margin-bottom: 10px; /* Added */
+   padding: 0;
+}
+
+.nasiol{
+   width: 100%;
+   border: none;
+   box-shadow: 0px 0px 30px rgba(129, 129, 129, 0.459);
+}
+
+#contato{
+   width: 180px;
+   font-size: 0.9em;
+}
+
+.dropdown-item:hover{
+   background-color: rgba(248, 166, 166, 0.377);
+   transition: 1s;
+   color: black;
+}
+
+.mapa{
+   height: 400px;
+   width: 800px;
+}
+
+.rodape{
+   color:#fff;
+   font-family: 'Roboto', sans-serif;
+   font-size:1.5em;
+   font-weight:500;
+   text-decoration: none;
+}
+.rodape2{
+   color: #fff;
+   font-family: 'Roboto', sans-serif;
+   font-size:1.1em;
+   font-weight:500;
+   text-decoration: none;
+}
+
+.footer{
+   background-color: #fff;
+   height: 70px;
+   width: 100% !important;
+   margin: 0;
+   font-weight: 500;
 }
