--- a/SITE-FINAL/style/style.css
+++ b/SITE-FINAL/style/style.css
@@ -120,17 +120,21 @@ body{
    text-decoration: none;
 }
 
+.rodape3{
+   height: 200px;
+}
+
 .footer{
    background-color: #fff;
    height: 40px;
    width: 100% !important;
-   margin: 0;
+
    font-weight: 500;
    padding-top: 8px;
 }
 
 .fundosobre{
-   background-image: none;
+   background-image: url(/SITE-FINAL/img/senactat.jpg);
    background-color: rgba(70, 70, 70, 0.507);
 }
 
@@ -148,11 +152,15 @@ body{
    padding-left: 10px;
    padding-top: 10px;
    width: 250px;
+   font-size: 1.3em ;
+   text-shadow:5px 7px 10px black;
 }
 
 #prof{
    margin-top: 40px;
    margin-right: 10px;
+   font-size: 1.3em ;
+   text-shadow:5px 7px 10px black;
 }
 
 .senac {
