Correção de erros na visibilidade responsiva

--- a/SITE-FINAL/style/style.css
+++ b/SITE-FINAL/style/style.css
@@ -19,10 +19,12 @@ body{
    background-image: url(/SITE-FINAL/img/ferrari.png);
    background-repeat: no-repeat;
    width: 100%;
+
 }
 
 .parte2{
    background-color: black;
+   
 }
 
 .parte3{
@@ -51,6 +53,7 @@ body{
    font-size:1.2em;
    font-weight:400;
    padding-bottom: 15px;
+   padding: 20px;
 }
 
 .largura-carousel {
@@ -109,6 +112,7 @@ body{
    font-size: 0.9em;
 }
 
+
 .dropdown-item:hover{
    background-color: rgba(248, 166, 166, 0.377);
    transition: 1s;
@@ -133,10 +137,12 @@ body{
    font-size:1.1em;
    font-weight:500;
    text-decoration: none;
+   margin-right: 50px;
 }
 
 .rodape3{
-   height: 200px;
+   height: 150px;
+   margin-top: 50px;
 }
 
 .footer{
@@ -195,6 +201,7 @@ body{
 
    .parte4{
       background-image: url(/SITE-FINAL/img/japao3.png);
+      height: 100%;
    }
 
    .largura-carousel{
@@ -218,9 +225,24 @@ body{
 
    .footer{
       height: 60px;
-      width: 100% !important;
+      width: 100vw !important;
       font-weight: 500;
       padding-top: 8px;
+      margin: 0;
    }
 
+   #integrantes{
+      margin-left: 0;
+      padding-left: 0;
+   }
+
+   .senac{
+      height: 200px;
+      width: 250px;
+   }
+
+   #contato{
+      width:auto;
+      font-size: 1em;
+   }
 }
