--- a/SITE-FINAL/style/style.css
+++ b/SITE-FINAL/style/style.css
@@ -9,7 +9,7 @@
 }
 
 body{
-   background-color:rgb(255, 142, 142);
+   background-color:rgb(255, 255, 255);
 /*    background-image: url(/SITE-FINAL/img/fundobody.png);
    background-repeat: no-repeat; */
    overflow-x: hidden;
@@ -153,6 +153,17 @@ body{
    padding-top: 8px;
 }
 
+.footer2{
+   background-color: #fff;
+   height: 40px;
+   width: 100vw;
+   font-weight: 500;
+   padding-top: 8px;
+   position: fixed;
+    bottom:0;
+    left:0;
+}
+
 .fundosobre{
    background-image: url(/SITE-FINAL/img/senactat.jpg);
    background-color: rgba(70, 70, 70, 0.507);
@@ -229,6 +240,7 @@ body{
       font-weight: 500;
       padding-top: 8px;
       margin: 0;
+      position:relative;
    }
 
    #integrantes{
