--- a/SITE-FINAL/style/style.css
+++ b/SITE-FINAL/style/style.css
@@ -2,6 +2,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Comic+Neue:wght@700&family=Roboto:wght@100;300;400;500&display=swap');
 
+   
+
 *{
    margin:0px;
    padding:0px;
@@ -104,7 +106,7 @@ body{
 .nasiol{
    width: 100%;
    border: none;
-   box-shadow: 0px 0px 30px rgba(129, 129, 129, 0.459);
+   box-shadow: 0px 0px 30px rgba(129, 129, 129, 0.459);  
 }
 
 #contato{
@@ -134,10 +136,10 @@ body{
 .rodape2{
    color: #fff;
    font-family: 'Roboto', sans-serif;
-   font-size:1.1em;
+   font-size:1.5em;
    font-weight:500;
    text-decoration: none;
-   margin-right: 50px;
+   margin-right: 2px;
 }
 
 .rodape3{
@@ -210,6 +212,15 @@ body{
       background-color: black;
    }
 
+   .parte1{
+      background-image: url(/SITE-FINAL/img/ferrariM.png);
+   }
+
+   .parte3{
+      background-image: url(/SITE-FINAL/img/oficinaM.png);
+   }
+
+
    .parte4{
       background-image: url(/SITE-FINAL/img/japao3.png);
       height: 100%;
@@ -225,7 +236,10 @@ body{
    }
 
    .pem2{
-      margin-left: 1px;
+      display: block;
+      margin: 0px auto !important;
+      margin-left: 10% !important;
+      width: 80%;
    }
 
    .mapa{
@@ -256,5 +270,10 @@ body{
    #contato{
       width:auto;
       font-size: 1em;
+   }
+
+   .nasiol{
+      display: block;
+      margin: 0px auto !important;
    }
 }
